# cbzserver

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  cache.db  fileerrors.txt  graph.dot  logfile.txt  mismatch.py  runserver.bat  ser.md  timestamp.txt  users.db
.github/workflows/: main.yml
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.tsx
frontend/src/components/: ProtectedRoutes.tsx  comicview.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Login.tsx  Settings.tsx  comiclibrary.tsx
frontend/src/pages/Home/: index.tsx
src/: cbzlogic.rs  cbztools.rs  dbhandle.rs  main.rs  matchlogic.rs  sqlitejson.rs  treegen.rs
src/components/: layout.rs
src/templates/: index.rs  library.rs  mod.rs
static/: folderhandler.js  homepage.html  settings.html  styles.css
templates/: home.html  login.html
