[package]
name = "cbzserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0.217", features = ["derive"] }
unrar = "0.5.3"
tempfile = "3.7.0"
rand = "0.3.14"
zip = "0.5.10"
sysinfo = "0.33.1"
serde_json = "1.0.137"
rayon = "1.10.0"
tokio = { version = "1.43.0", features = ["fs", "rt-multi-thread", "macros"] }
futures = "0.3.31"
